TM-4036 Fixes issue displaying the Error Modal behind other opened Modals.
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@6573 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1143,7 +1143,7 @@ a#taskLinkAllId * {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 1030;
+	z-index: 9999;
 	background-color: #000000;
 }
 
